# mobilefusion

./: CMakeLists.txt  CMakeLists.txt~  FindCPUTSDF.cmake  README.md  icp_test.cpp  main.cpp  main2.cpp
include/: CameraInterface.h  CloudCompareRenderer.h  CloudListener.h  CloudNormalListener.h  CloudNormalProvider.h  CloudPair.h  CloudProvider.h  CloudRecorder.h  CloudRegister.h  CloudRenderer.h  CpuTsdf.h  FusionManager.h  Kinect.h  KinectFrameListener.h  KinectFrameToCloud.h  KinectInterface.h  KinectPngReader.h  KinectRecorder.h  KinectRegistration.h  KinectRenderer.h  MarchingCubeTsdfOctree.h  Octree.h  OctreeNode.h  TSDFVolumeWrapper.h  TsdfInterface.h  TsdfVolumeOctree.h  TsdfVolumeOctree.hpp  Util3d.h  Util3dRegistration.h  util3d.h  util3d_registration.h
src/: CameraInterface.cpp  CloudCompareRenderer.cpp  CloudNormalProvider.cpp  CloudProvider.cpp  CloudRecorder.cpp  CloudRegister.cpp  CloudRenderer.cpp  CpuTsdf.cpp  FusionManager.cpp  Kinect.cpp  KinectFrameListener.cpp  KinectFrameToCloud.cpp  KinectPngReader.cpp  KinectRecorder.cpp  KinectRegistration.cpp  KinectRenderer.cpp  MarchingCubeTsdfOctree.cpp  Octree.cpp  OctreeNode.cpp  Register.cpp  TSDFVolumeWrapper.cpp  TsdfVolumeOctree.cpp  Util3d.cpp  Util3dRegistration.cpp  util3d.cpp  util3d_registration.cpp
